Add icons for SOVA V RE and Centr-invest

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -13,6 +13,7 @@
 	<item drawable="blitz_ai" />
 	<item drawable="boorusama" />
 	<item drawable="camaleon" />
+	<item drawable="ceninv" />
 	<item drawable="daily_dev" />
 	<item drawable="discover_mobile" />
 	<item drawable="frontpage" />
@@ -47,6 +48,9 @@
 	<item drawable="scaleway_manager" />
 	<item drawable="settings_database_provider" />
 	<item drawable="simple_markdown" />
+	<item drawable="sova_v_re" />
+	<item drawable="sova_v_re_alt_1" />
+	<item drawable="sova_v_re_alt_2" />
 	<item drawable="suyu" />
 	<item drawable="temp_mail_io" />
 	<item drawable="thunderbird" />
@@ -926,6 +930,8 @@
 	<item drawable="sonic_the_hedgehog_2_alt_1" />
 	<item drawable="sonic_the_hedgehog_alt_1" />
 	<item drawable="sony_videography_alt_1" />
+	<item drawable="sova_v_re_alt_1" />
+	<item drawable="sova_v_re_alt_2" />
 	<item drawable="spin_the_wheel_alt_1" />
 	<item drawable="spmp_alt_1" />
 	<item drawable="spotify_alt_1" />
@@ -3348,6 +3354,7 @@
 	<item drawable="cengage" />
 	<item drawable="cent_central" />
 	<item drawable="cent_mobile" />
+	<item drawable="ceninv" />
 	<item drawable="central_de_pasajes" />
 	<item drawable="cephalon_navis" />
 	<item drawable="cerascreen" />
@@ -9294,6 +9301,7 @@
 	<item drawable="soundtap" />
 	<item drawable="south_park_phone_destroyer" />
 	<item drawable="southwest_airlines" />
+	<item drawable="sova_v_re" />
 	<item drawable="space_coast_cu_mobile" />
 	<item drawable="spacedesk" />
 	<item drawable="spaceflight_simulator" />
