Add BBC Bitesize icon, Update rest of BBC apps, Add ComponentInfos

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -516,8 +516,9 @@
 	<item component="ComponentInfo{bancaribe.miconexion/bancaribe.miconexion.MainActivity}" drawable="bancaribe_digital" />
 	<item component="ComponentInfo{bank.discovery.banking.production.release/za.co.discovery.discoverypurple.oboarding.GettingStartedActivity}" drawable="bank" />
 	<item component="ComponentInfo{bank.trustco.mobile/com.orcc.MainActivity}" drawable="bank" />
-	<item component="ComponentInfo{bbc.iplayer.android/uk.co.bbc.iplayer.config.ui.ConfigLoadingActivity}" drawable="bbc_i_player" />
-	<item component="ComponentInfo{bbc.iplayer.android/uk.co.bbc.iplayer.startup.StartupActivity}" drawable="bbc_i_player" />
+	<item component="ComponentInfo{bbc.iplayer.android/uk.co.bbc.iplayer.config.ui.ConfigLoadingActivity}" drawable="bbc_iplayer" />
+	<item component="ComponentInfo{bbc.iplayer.android/uk.co.bbc.iplayer.startup.routing.RoutingActivity}" drawable="bbc_iplayer" />
+	<item component="ComponentInfo{bbc.iplayer.android/uk.co.bbc.iplayer.startup.StartupActivity}" drawable="bbc_iplayer" />
 	<item component="ComponentInfo{bbc.mobile.news.uk/bbc.mobile.news.v3.app.TopLevelActivity}" drawable="bbc_news" />
 	<item component="ComponentInfo{bbc.mobile.news.uk/bbc.mobile.news.v3.ui.splash.SplashActivity}" drawable="bbc_news" />
 	<item component="ComponentInfo{bbc.mobile.news.ww/bbc.mobile.news.v3.app.TopLevelActivity}" drawable="bbc_news" />
