--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -8,6 +8,11 @@
 	<item drawable="arc_search" />
 	<item drawable="audio_editor_and_music_editor" />
 	<item drawable="azyx" />
+	<item drawable="bbc_iplayer" />
+	<item drawable="bbc_news" />
+	<item drawable="bbc_sounds" />
+	<item drawable="bbc_sport" />
+	<item drawable="bbc_weather" />
 	<item drawable="bcr_manager" />
 	<item drawable="birthday_countdown" />
 	<item drawable="blitz_ai" />
@@ -37,6 +42,7 @@
 	<item drawable="liieypet" />
 	<item drawable="medium" />
 	<item drawable="mercado_pago" />
+	<item drawable="messenger_kids" />
 	<item drawable="multilocale" />
 	<item drawable="my_fitness_pal" />
 	<item drawable="my_notes" />
@@ -2770,14 +2776,18 @@
 	<item drawable="battlescribe" />
 	<item drawable="bazarnote" />
 	<item drawable="bbb" />
-	<item drawable="bbc_i_player" />
+	<item drawable="bbc_iplayer" />
+	<item drawable="bbc_iplayer_alt" />
 	<item drawable="bbc_iplayer_radio" />
 	<item drawable="bbc_learning_english" />
 	<item drawable="bbc_media_player" />
 	<item drawable="bbc_news" />
-	<item drawable="bbc_sounds" />
+	<item drawable="bbc_news_alt" />
+	<item drawable="bbc_sounds_alt" />
 	<item drawable="bbc_sport" />
+	<item drawable="bbc_sport_alt" />
 	<item drawable="bbc_weather" />
+	<item drawable="bbc_weather_alt" />
 	<item drawable="bbm" />
 	<item drawable="bbva" />
 	<item drawable="bc_services_card" />
@@ -6558,6 +6568,7 @@
 	<item drawable="messagerie_free" />
 	<item drawable="messenger" />
 	<item drawable="messenger_kids" />
+	<item drawable="messenger_kids_alt" />
 	<item drawable="messenger_lite" />
 	<item drawable="messenger_plus" />
 	<item drawable="messenger_plus_turbo" />
