--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -2777,17 +2777,17 @@
 	<item drawable="bazarnote" />
 	<item drawable="bbb" />
 	<item drawable="bbc_iplayer" />
-	<item drawable="bbc_iplayer_alt" />
+	<item drawable="bbc_iplayer_alt_1" />
 	<item drawable="bbc_iplayer_radio" />
 	<item drawable="bbc_learning_english" />
 	<item drawable="bbc_media_player" />
 	<item drawable="bbc_news" />
-	<item drawable="bbc_news_alt" />
-	<item drawable="bbc_sounds_alt" />
+	<item drawable="bbc_news_alt_1" />
+	<item drawable="bbc_sounds_alt_1" />
 	<item drawable="bbc_sport" />
-	<item drawable="bbc_sport_alt" />
+	<item drawable="bbc_sport_alt_1" />
 	<item drawable="bbc_weather" />
-	<item drawable="bbc_weather_alt" />
+	<item drawable="bbc_weather_alt_1" />
 	<item drawable="bbm" />
 	<item drawable="bbva" />
 	<item drawable="bc_services_card" />
