--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -2992,7 +2992,7 @@
 	<item drawable="blogger" />
 	<item drawable="blokada" />
 	<item drawable="blomeetunes" />
-	<item drawable="blood_pressure_app" />
+	<item drawable="blood_pressure_monitor" />
 	<item drawable="blood_strike" />
 	<item drawable="bloomberg" />
 	<item drawable="bloons_pop" />
