--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -3193,7 +3193,7 @@
 	<item component="ComponentInfo{com.depop/com.depop._v2.app.splash.SplashActivity}" drawable="depop" />
 	<item component="ComponentInfo{com.depop/com.depop._v2.splash.app.SplashActivity}" drawable="depop" />
 	<item component="ComponentInfo{com.deputy.android/com.deputy.android.app.activities.LandingActivity}" drawable="deputy" />
-	<item component="ComponentInfo{com.derdilla.bloodPressureApp/com.derdilla.blood_pressure_app.MainActivity}" drawable="blood_pressure_app" />
+	<item component="ComponentInfo{com.derdilla.bloodPressureApp/com.derdilla.blood_pressure_app.MainActivity}" drawable="blood_pressure_monitor" />
 	<item component="ComponentInfo{com.dergoogler.mmrl/com.dergoogler.mmrl.MainActivity}" drawable="mmrl" />
 	<item component="ComponentInfo{com.dergoogler.mmrl/com.dergoogler.mmrl.ui.activity.MainActivity}" drawable="mmrl" />
 	<item component="ComponentInfo{com.desertschools.mobilebanking/com.desertschools.mobilebanking.MainActivity}" drawable="desert_finanical" />
