--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -18,6 +18,9 @@
 	<item drawable="blitz_ai" />
 	<item drawable="boorusama" />
 	<item drawable="camaleon" />
+	<item drawable="cbc_listen" />
+	<item drawable="cbc_news" />
+	<item drawable="cbc_sports" />
 	<item drawable="ceninv" />
 	<item drawable="daily_dev" />
 	<item drawable="discover_mobile" />
@@ -127,6 +130,11 @@
 	<item drawable="bank_of_america_alt_1" />
 	<item drawable="basic_call_recorder_alt_1" />
 	<item drawable="battery_guru_alt_1" />
+	<item drawable="bbc_iplayer_alt_1" />
+	<item drawable="bbc_news_alt_1" />
+	<item drawable="bbc_sounds_alt_1" />
+	<item drawable="bbc_sport_alt_1" />
+	<item drawable="bbc_weather_alt_1" />
 	<item drawable="bilibili_alt_1" />
 	<item drawable="binance_alt_1" />
 	<item drawable="binary_eye_alt_1" />
@@ -157,6 +165,9 @@
 	<item drawable="cat_avatar_generator_alt_1" />
 	<item drawable="catcode_alt_1" />
 	<item drawable="cbc_gem_alt_1" />
+	<item drawable="cbc_listen_alt_1" />
+	<item drawable="cbc_news_alt_1" />
+	<item drawable="cbc_sports_alt_1" />
 	<item drawable="change_my_mac_alt_1" />
 	<item drawable="chrome_alt_1" />
 	<item drawable="chrome_alt_2" />
@@ -2777,17 +2788,12 @@
 	<item drawable="bazarnote" />
 	<item drawable="bbb" />
 	<item drawable="bbc_iplayer" />
-	<item drawable="bbc_iplayer_alt_1" />
 	<item drawable="bbc_iplayer_radio" />
 	<item drawable="bbc_learning_english" />
 	<item drawable="bbc_media_player" />
 	<item drawable="bbc_news" />
-	<item drawable="bbc_news_alt_1" />
-	<item drawable="bbc_sounds_alt_1" />
 	<item drawable="bbc_sport" />
-	<item drawable="bbc_sport_alt_1" />
 	<item drawable="bbc_weather" />
-	<item drawable="bbc_weather_alt_1" />
 	<item drawable="bbm" />
 	<item drawable="bbva" />
 	<item drawable="bc_services_card" />
