Rename Top Trump Wallpapers to Trump Wallpapers

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -10016,7 +10016,6 @@
 	<item drawable="tooot" />
 	<item drawable="top" />
 	<item drawable="top_hat" />
-	<item drawable="top_trump_wallpapers" />
 	<item drawable="tophatter" />
 	<item drawable="tor_browser" />
 	<item drawable="tor_browser_alpha" />
@@ -10139,6 +10138,7 @@
 	<item drawable="truist" />
 	<item drawable="trulia" />
 	<item drawable="trulia_mortgage" />
+	<item drawable="trump_wallpapers" />
 	<item drawable="trunks_for_mastodon" />
 	<item drawable="trust" />
 	<item drawable="trustdevice_fingerprint" />
