--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -213,7 +213,7 @@
 	<item drawable="dinamalar_alt_1" />
 	<item drawable="dinamalar_alt_2" />
 	<item drawable="directv_alt_1" />
-	<item drawable="disconnect_alt" />
+	<item drawable="disconnect_alt_1" />
 	<item drawable="discord_alt_1" />
 	<item drawable="discord_alt_2" />
 	<item drawable="doom_alt_1" />
@@ -395,6 +395,7 @@
 	<item drawable="mercado_pago_alt_1" />
 	<item drawable="mercari_alt_1" />
 	<item drawable="messenger_alt_1" />
+	<item drawable="messenger_kids_alt_1" />
 	<item drawable="messenger_lite_alt_1" />
 	<item drawable="mi_movistar_alt_1" />
 	<item drawable="mi_security_alt_1" />
@@ -6574,7 +6575,6 @@
 	<item drawable="messagerie_free" />
 	<item drawable="messenger" />
 	<item drawable="messenger_kids" />
-	<item drawable="messenger_kids_alt" />
 	<item drawable="messenger_lite" />
 	<item drawable="messenger_plus" />
 	<item drawable="messenger_plus_turbo" />
