--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10652,7 +10652,7 @@
 	<item component="ComponentInfo{com.winlator/com.winlator.MainActivity}" drawable="winlator" />
 	<item component="ComponentInfo{com.wire/com.waz.zclient.LaunchActivity}" drawable="wire" />
 	<item component="ComponentInfo{com.wireguard.android/com.wireguard.android.activity.MainActivity}" drawable="wireguard" />
-	<item component="ComponentInfo{com.wirelessalien.android.moviedb/com.wirelessalien.android.moviedb.activity.MainActivity}" drawable="moviedb" />
+	<item component="ComponentInfo{com.wirelessalien.android.moviedb/com.wirelessalien.android.moviedb.activity.MainActivity}" drawable="showcase" />
 	<item component="ComponentInfo{com.wirex/com.wirex.presenters.splash.view.SplashActivity}" drawable="wirex" />
 	<item component="ComponentInfo{com.wiseschematics.eqfy/com.wiseschematics.eqfy.EQ}" drawable="eqfy_equalizer" />
 	<item component="ComponentInfo{com.wishabi.flipp/com.wishabi.flipp.app.DefaultLauncherActivity}" drawable="flipp" />
