--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -109,7 +109,7 @@
 	<item component="ComponentInfo{.dolphinemu.mmjr/org.dolphinemu.dolphinemu.ui.main.MainActivity}" drawable="dolphin_emulator" />
 	<item component="ComponentInfo{InfinityLoop1309.NewPipeEnhanced/org.schabi.newpipe.MainActivity}" drawable="animepipe" />
 	<item component="ComponentInfo{MyING.be/be.ing.and.mobile.gui.prelogin.PreLoginActivity}" drawable="ing" />
-	<item component="ComponentInfo{aapp.rvx.android.youtube/com.google.android.youtube.app.honeycomb.Shell$HomeActivity}" drawable="youtube_revanced_alt_7" />
+	<item component="ComponentInfo{app.rvx.android.youtube/com.google.android.youtube.app.honeycomb.Shell$HomeActivity}" drawable="youtube_revanced_alt_7" />
 	<item component="ComponentInfo{ab.rapid70/ab.rapid70.MainActivity}" drawable="rapid_70" />
 	<item component="ComponentInfo{abdelrahman.wifianalyzerpro/abdelrahman.wifianalyzerpro.MainActivity}" drawable="wifi_analyzer" />
 	<item component="ComponentInfo{accky.kreved.skrwt.skrwt/accky.kreved.skrwt.skrwt.LaunchScreenActivity}" drawable="skrwt" />
@@ -10652,7 +10652,7 @@
 	<item component="ComponentInfo{com.winlator/com.winlator.MainActivity}" drawable="winlator" />
 	<item component="ComponentInfo{com.wire/com.waz.zclient.LaunchActivity}" drawable="wire" />
 	<item component="ComponentInfo{com.wireguard.android/com.wireguard.android.activity.MainActivity}" drawable="wireguard" />
-	<item component="ComponentInfo{com.wirelessalien.android.moviedb/com.wirelessalien.android.moviedb.activity.MainActivity}" drawable="moviedb" />
+	<item component="ComponentInfo{com.wirelessalien.android.moviedb/com.wirelessalien.android.moviedb.activity.MainActivity}" drawable="showcase" />
 	<item component="ComponentInfo{com.wirex/com.wirex.presenters.splash.view.SplashActivity}" drawable="wirex" />
 	<item component="ComponentInfo{com.wiseschematics.eqfy/com.wiseschematics.eqfy.EQ}" drawable="eqfy_equalizer" />
 	<item component="ComponentInfo{com.wishabi.flipp/com.wishabi.flipp.app.DefaultLauncherActivity}" drawable="flipp" />
