Add icons + Fixes

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -3305,12 +3305,13 @@
 	<item component="ComponentInfo{com.discord/com.discord.main.MainGalaxy}" drawable="discord" />
 	<item component="ComponentInfo{com.discord/com.discord.screens.ScreenAux$Main}" drawable="discord" />
 	<item component="ComponentInfo{com.discord/com.discord.screens.ScreenLoading}" drawable="discord" />
-	<item component="ComponentInfo{com.discoverfinancial.mobile/c6471e4fe.w09cf6196.n6c037710.o50da4a26}" drawable="discover" />
-	<item component="ComponentInfo{com.discoverfinancial.mobile/com.discover.mobile.common.login.LoginActivity}" drawable="discover" />
-	<item component="ComponentInfo{com.discoverfinancial.mobile/com.discoverfinancial.mobile.MainActivity}" drawable="discover" />
-	<item component="ComponentInfo{com.discoverfinancial.mobile/lf0af873a.e37dcd7f3.a55198c2f.x72a99b04}" drawable="discover" />
+	<item component="ComponentInfo{com.discoverfinancial.mobile/c6471e4fe.w09cf6196.n6c037710.o50da4a26}" drawable="discover_mobile" />
+	<item component="ComponentInfo{com.discoverfinancial.mobile/com.discover.mobile.common.login.LoginActivity}" drawable="discover_mobile" />
+	<item component="ComponentInfo{com.discoverfinancial.mobile/com.discoverfinancial.mobile.MainActivity}" drawable="discover_mobile" />
+	<item component="ComponentInfo{com.discoverfinancial.mobile/lf0af873a.e37dcd7f3.a55198c2f.x72a99b04}" drawable="discover_mobile" />
 	<item component="ComponentInfo{com.discoverfinancial.mobile/pf541ae78.wa3b13fd1.e7dfda19d.o4531864c}" drawable="discover_mobile" />
-	<item component="ComponentInfo{com.discoverfinancial.mobile/r13fa4bdb.rcd00874d.e8944d836.y0b26d82e}" drawable="discover" />
+	<item component="ComponentInfo{com.discoverfinancial.mobile/r13fa4bdb.rcd00874d.e8944d836.y0b26d82e}" drawable="discover_mobile" />
+	<item component="ComponentInfo{com.discoverfinancial.mobile/t1f04b1f2.w06eefb86.ud5e763b5.lca821f28}" drawable="discover_mobile" />
 	<item component="ComponentInfo{com.discovery.discoveryplus.mobile/com.discovery.plus.presentation.activities.LaunchActivity}" drawable="discovery_plus" />
 	<item component="ComponentInfo{com.discovery.dplay/com.discovery.app.LaunchActivity}" drawable="discovery_plus" />
 	<item component="ComponentInfo{com.discoveryplus.mobile.android/com.discoveryplus.android.mobile.DPlusMainActivity}" drawable="discovery_plus" />
@@ -4746,6 +4747,7 @@
 	<item component="ComponentInfo{com.grindrapp.android/com.grindrapp.android.HomeActivityUnlimited}" drawable="grindr" />
 	<item component="ComponentInfo{com.grindrapp.android/com.grindrapp.android.SplashActivity-Original}" drawable="grindr" />
 	<item component="ComponentInfo{com.grindrapp.android/com.grindrapp.android.activity.SplashActivity}" drawable="grindr" />
+	<item component="ComponentInfo{com.grofers.customerapp.lit/com.grofers.customerapp.DEFAULT}" drawable="blinkit" />
 	<item component="ComponentInfo{com.grofers.customerapp/com.grofers.customerapp.DEFAULT}" drawable="blinkit" />
 	<item component="ComponentInfo{com.grofers.customerapp/com.grofers.customerapp.ui.screens.splash.SplashActivity}" drawable="blinkit" />
 	<item component="ComponentInfo{com.grofsoft.tripview.lite/com.grofsoft.tripview.TripViewActivity}" drawable="tripview" />
@@ -6272,6 +6274,7 @@
 	<item component="ComponentInfo{com.meitu.meiyancamera/com.meitu.myxj.home.activity.NewHomeActivity}" drawable="beautycam" />
 	<item component="ComponentInfo{com.meizu.media.gallery/com.meizu.media.gallery.GalleryActivity}" drawable="gallery" />
 	<item component="ComponentInfo{com.meleven_pets.elevenpets/com.meleven_pets.elevenpets.pDashboard.activityEntry}" drawable="_11pet" />
+	<item component="ComponentInfo{com.melodis.midomiMusicIdentifier.freemium/com.melodis.midomiMusicIdentifier.appcommon.activity.SplashScreenActivity}" drawable="sound__hound" />
 	<item component="ComponentInfo{com.melodis.midomiMusicIdentifier.freemium/com.soundhound.android.appcommon.activity.SplashScreenActivity}" drawable="sound__hound" />
 	<item component="ComponentInfo{com.melodis.midomiMusicIdentifier/com.soundhound.android.appcommon.activity.SplashScreenActivity}" drawable="sound__hound" />
 	<item component="ComponentInfo{com.melon.appstract.dark/com.candybar.sample.activities.SplashActivity}" drawable="appstract_dark" />
@@ -8096,6 +8099,7 @@
 	<item component="ComponentInfo{com.samsung.android.sidegesturepad/com.samsung.android.sidegesturepad.settings.SGPSettingsActivity}" drawable="samsung_one_hand_operation_plus" />
 	<item component="ComponentInfo{com.samsung.android.sm/com.samsung.android.sm.app.dashboard.SmartManagerDashBoardActivity}" drawable="samsung_smart_manager" />
 	<item component="ComponentInfo{com.samsung.android.snote/com.samsung.android.snote.control.ui.filemanager.MainHomeActivity}" drawable="samsung_notes_alt_1" />
+	<item component="ComponentInfo{com.samsung.android.soundassistant/com.samsung.android.soundassistant.activities.MainActivity}" drawable="samsung_soundassistant" />
 	<item component="ComponentInfo{com.samsung.android.soundassistant/com.sec.android.soundassistant.activities.MainActivity}" drawable="samsung_soundassistant" />
 	<item component="ComponentInfo{com.samsung.android.spay/com.samsung.android.spay.ui.SpayMainActivity}" drawable="samsung_pay" />
 	<item component="ComponentInfo{com.samsung.android.spaymini/com.samsung.android.spay.ui.SpayMainActivity}" drawable="samsung_pay_mini" />
@@ -9442,7 +9446,7 @@
 	<item component="ComponentInfo{com.sweak.qralarm/com.sweak.qralarm.MainActivity}" drawable="qralarm" />
 	<item component="ComponentInfo{com.sweak.unlockmaster/com.sweak.unlockmaster.presentation.MainActivity}" drawable="unlockmaster" />
 	<item component="ComponentInfo{com.sweatwallet/com.sweatwallet.MainActivity}" drawable="sweat_wallet" />
-	<item component="ComponentInfo{com.swedbank/com.swedbank.mobile.app.MainActivity}" drawable="bank" />
+	<item component="ComponentInfo{com.swedbank/com.swedbank.mobile.app.MainActivity}" drawable="swedbank" />
 	<item component="ComponentInfo{com.swiftsoft.anixartd/com.swiftsoft.anixartd.ui.activity.StartActivity}" drawable="anixart" />
 	<item component="ComponentInfo{com.swiss_codemonkeys.funnyjokes/com.appspot.swisscodemonkeys.jokes.Jokes}" drawable="funny_jokes" />
 	<item component="ComponentInfo{com.swissborg.android.community/com.swissborg.android.community.ui.AppActivity}" drawable="crypto_challenge" />
@@ -10565,6 +10569,7 @@
 	<item component="ComponentInfo{com.wealthica/com.wealthica.MainActivity}" drawable="wealthica" />
 	<item component="ComponentInfo{com.wealthsimple.cash/com.wealthsimple.cash.LaunchActivity}" drawable="wealthsimple_cash" />
 	<item component="ComponentInfo{com.wealthsimple.trade/com.wealthsimple.trade.LaunchActivity}" drawable="wealthsimple_trade" />
+	<item component="ComponentInfo{com.wealthsimple.trade/com.wealthsimple.trade.MainActivityDefault}" drawable="wealthsimple_trade" />
 	<item component="ComponentInfo{com.wealthsimple.trade/host.exp.exponent.LaunchActivity}" drawable="wealthsimple_trade" />
 	<item component="ComponentInfo{com.wealthsimple/com.wealthsimple.BranchActivity}" drawable="wealthsimple" />
 	<item component="ComponentInfo{com.weareher.her/com.weareher.her.SplashActivity}" drawable="her" />
@@ -12656,14 +12661,14 @@
 <item component="ComponentInfo{lt.lemonlabs.android.paysera/com.paysera.LaunchScreenActivity}" drawable="paysera" />
 	<item component="ComponentInfo{lt.maxima.aciu/lt.maxima.aciu.LauncherActivity}" drawable="maxima" />
 	<item component="ComponentInfo{lt.sb.mobileapp/com.siauliu.bankas.mobile.StartActivity}" drawable="bank" />
-	<item component="ComponentInfo{lt.swedbank.mobile/com.swedbank.mobile.app.MainActivity}" drawable="bank" />
+	<item component="ComponentInfo{lt.swedbank.mobile/com.swedbank.mobile.app.MainActivity}" drawable="swedbank" />
 	<item component="ComponentInfo{ltd.evilcorp.atox/ltd.evilcorp.atox.MainActivity}" drawable="atox" />
 	<item component="ComponentInfo{lu.gian.uniwhere/lu.gian.uniwhere.MainActivity}" drawable="uniwhere" />
 	<item component="ComponentInfo{lu.takeaway.android/com.takeaway.android.activity.Splash}" drawable="takeaway" />
 	<item component="ComponentInfo{luci.sixsixsix.powerampache2.fdroid/luci.sixsixsix.powerampache2.presentation.MainActivity}" drawable="power_ampache_2" />
 	<item component="ComponentInfo{luke.kfz/luke.kfz.MainActivity}" drawable="kfz_kennzeichen" />
 	<item component="ComponentInfo{lv.mobilly.android/lv.mobilly.android.MainActivity}" drawable="mobilly" />
-	<item component="ComponentInfo{lv.swedbank.mobile/com.swedbank.mobile.app.MainActivity}" drawable="bank" />
+	<item component="ComponentInfo{lv.swedbank.mobile/com.swedbank.mobile.app.MainActivity}" drawable="swedbank" />
 	<item component="ComponentInfo{ly.com.tahaben.farhan/ly.com.tahaben.farhan.MainActivity}" drawable="farhan" />
 	<item component="ComponentInfo{lyr.search.net/crc6408ad57c5246dbb85.SplashScreen}" drawable="fildo" />
 	<item component="ComponentInfo{lysesoft.andftp/lysesoft.andftp.SplashActivity}" drawable="andftp" />
@@ -14521,11 +14526,11 @@
 	<item component="ComponentInfo{se.sj.android/se.sj.android.activity.SjNavigationDrawer}" drawable="sj_trains" />
 	<item component="ComponentInfo{se.skanetrafiken.washington/se.skanetrafiken.washington.StartActivity}" drawable="skanetrafiken" />
 	<item component="ComponentInfo{se.sos.soslive/se.sos.soslive.activities.SplashActivity}" drawable="sos_alarm" />
-	<item component="ComponentInfo{se.sparbankerna.mobilbank/se.swedbank.mobilbank.general.SplashActivity}" drawable="bank" />
+	<item component="ComponentInfo{se.sparbankerna.mobilbank/se.swedbank.mobilbank.general.SplashActivity}" drawable="swedbank" />
 	<item component="ComponentInfo{se.svt.android.svtplay/se.svt.svtplay.ui.mobile.MainActivity}" drawable="svt_play" />
-	<item component="ComponentInfo{se.swedbank.mobil/se.swedbank.mobilbank.MainMenuActivity}" drawable="bank" />
-	<item component="ComponentInfo{se.swedbank.mobil/se.swedbank.mobilbank.general.SplashActivity}" drawable="bank" />
-	<item component="ComponentInfo{se.swedbank.mobil/se.swedbank.mobilbank.general.StartActivity}" drawable="bank" />
+	<item component="ComponentInfo{se.swedbank.mobil/se.swedbank.mobilbank.MainMenuActivity}" drawable="swedbank" />
+	<item component="ComponentInfo{se.swedbank.mobil/se.swedbank.mobilbank.general.SplashActivity}" drawable="swedbank" />
+	<item component="ComponentInfo{se.swedbank.mobil/se.swedbank.mobilbank.general.StartActivity}" drawable="swedbank" />
 	<item component="ComponentInfo{se.tv4.tv4playtab/se.tv4.tv4play.startup.SplashActivity}" drawable="tv4_play" />
 	<item component="ComponentInfo{se.ul.app/crc64f1705e16053f0986.SplashActivity}" drawable="ul" />
 	<item component="ComponentInfo{se.volvo.vcc/se.volvo.vcc.ui.activities.route.RouteActivity}" drawable="volvo_cars" />
