--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -219,6 +219,7 @@
 	<item drawable="disconnect_alt_1" />
 	<item drawable="discord_alt_1" />
 	<item drawable="discord_alt_2" />
+	<item drawable="discover_alt_1" />
 	<item drawable="doom_alt_1" />
 	<item drawable="doordash_alt_1" />
 	<item drawable="droid_ify_alt_1" />
@@ -4052,7 +4053,6 @@
 	<item drawable="discord" />
 	<item drawable="discord_bunny" />
 	<item drawable="discord_bunny_alt1" />
-	<item drawable="discover" />
 	<item drawable="discover_killer" />
 	<item drawable="discover_mobile" />
 	<item drawable="discovery_plus" />
