--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -385,4 +385,9 @@
         contribution="Testing"
         image=""
         link="" />
+    <contributor
+        name="Tmist3r"
+        contribution="Icon"
+        image=""
+        link="https://github.com/Tmist3r" />
 </resources>
