--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -6281,6 +6281,7 @@
 	<item component="ComponentInfo{com.medtronic.diabetes.minimedmobile.us/com.medtronic.minimed.ui.startupwizard.SplashScreenActivity}" drawable="medtronic_minimed" />
 	<item component="ComponentInfo{com.meenbeese.chronos/com.meenbeese.chronos.activities.MainActivity}" drawable="chronos" />
 	<item component="ComponentInfo{com.meesho.supply/com.meesho.supply.main.MainActivity}" drawable="meesho" />
+	<item component="ComponentInfo{com.meesho.supply/com.meesho.supply.default}" drawable="meesho" />
 	<item component="ComponentInfo{com.meetup.organizer/com.meetup.organizer.MainActivity}" drawable="meetup_for_organizers" />
 	<item component="ComponentInfo{com.meetup/com.meetup.activity.Bootstrap}" drawable="meetup" />
 	<item component="ComponentInfo{com.meetup/com.meetup.feature.legacy.activity.BootstrapActivity}" drawable="meetup" />
@@ -6823,7 +6824,7 @@
 	<item component="ComponentInfo{com.naver.whale/com.google.android.apps.chrome.Main}" drawable="naver_whale" />
 	<item component="ComponentInfo{com.navercorp.game.android.community/com.navercorp.game.android.community.MainActivity}" drawable="naver_chzzk" />
 	<item component="ComponentInfo{com.navigraph.chartsrn/com.navigraph.chartsrn.MainActivity}" drawable="charts" />
-	<item component="ComponentInfo{com.navyfederal.android/com.navyfederal.android.home.activity.SplashScreenActivity}" drawable="bank" />
+	<item component="ComponentInfo{com.navyfederal.android/com.navyfederal.android.home.activity.SplashScreenActivity}" drawable="navy_federal_credit_union" />
 	<item component="ComponentInfo{com.nazarsoroka.musicplayer/com.sdd.player.activity.MainActivity}" drawable="hq_music" />
 	<item component="ComponentInfo{com.nbadigital.gametimelite/com.nbadigital.gametimelite.features.splash.SplashActivity}" drawable="nba" />
 	<item component="ComponentInfo{com.nbaimd.gametime.nba2011/com.nba.nextgen.splash.SplashActivity}" drawable="nba" />
