--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -117,6 +117,7 @@
 	<item drawable="wikireader" />
 	<item drawable="windows_app" />
 	<item drawable="word_of_the_day" />
+	<item drawable="linksheet" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -419,6 +420,7 @@
 	<item drawable="libretube_shaped" />
 	<item drawable="libretube_torch" />
 	<item drawable="lichess_alt_1" />
+	<item drawable="linksheet_alt_1" />
 	<item drawable="linwood_butterfly_alt_1" />
 	<item drawable="listonic_alt_1" />
 	<item drawable="lookout_alt_1" />
