--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -3484,6 +3484,7 @@
 	<item component="ComponentInfo{com.duckduckgo.mobile.android/com.duckduckgo.mobile.android.activity.DuckDuckGo}" drawable="duckduckgo" />
 	<item component="ComponentInfo{com.ducont.muscatbank/com.ducont.muscatbank.FinacleMobileApp}" drawable="bank" />
 	<item component="ComponentInfo{com.duden.container/com.paragon.container.CatalogActivity}" drawable="duden" />
+	<item component="ComponentInfo{com.dunkinbrands.otgo/com.cardfree.android.dunkindonuts.activities.LauncherActivity}" drawable="dunkin" />
 	<item component="ComponentInfo{com.dunkinbrands.otgo/com.cardfree.android.dunkindonuts.activities.SplashActivity}" drawable="dunkin" />
 	<item component="ComponentInfo{com.duns.padiapp/com.duns.padiapp.presentation.SplashActivity}" drawable="padi" />
 	<item component="ComponentInfo{com.dunzo.user/com.dunzo.activities.SplashActivity}" drawable="dunzo" />
@@ -6606,6 +6607,7 @@
 	<item component="ComponentInfo{com.mokinetworks.bamboohr/com.bamboohr.bamboo.main.BambooHRMainActivity}" drawable="bamboohr" />
 	<item component="ComponentInfo{com.mokinetworks.bamboohr/com.bamboohr.bamboo.startup.BambooHRSplashActivity}" drawable="bamboohr" />
 	<item component="ComponentInfo{com.molo.dominos/com.molo.dominos.newdesign.ui.splashscreen.NDActivitySplashScreen}" drawable="dominos" />
+	<item component="ComponentInfo{com.molo.dominos/com.dominos.loadingscreen.InitialLaunchActivity}" drawable="dominos" />
 	<item component="ComponentInfo{com.monarchdesigns.moonriseiconpack/com.monarchdesigns.moonriseiconpack.MainActivity}" drawable="moonrise_icon_pack" />
 	<item component="ComponentInfo{com.monarchdesigns.sunriseiconpack/com.monarchdesigns.sunriseiconpack.MainActivity}" drawable="sunrise_icon_pack" />
 	<item component="ComponentInfo{com.monarchmoney.mobile/com.monarchmoney.mobile.SplashActivity}" drawable="monarch" />
