--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -14153,7 +14153,7 @@
 	<item component="ComponentInfo{pl.malopolska.mka.imka/crc648263bc47cf22d64c.SplashActivity}" drawable="imka" />
 	<item component="ComponentInfo{pl.malopolska.mka.imka/md5605b4e25aa223cac73c5dce7efb3a4a2.SplashActivity}" drawable="imka" />
 	<item component="ComponentInfo{pl.mapa_turystyczna.app/pl.mapa_turystyczna.app.SplashScreenActivity}" drawable="hiking_map" />
-	<item component="ComponentInfo{pl.mbank/pl.mbank.core.activity.StartActivity}" drawable="mbank" />
+	<item component="ComponentInfo{pl.mbank/pl.mbank.core.activity.StartActivity}" drawable="mbank_pl" />
 	<item component="ComponentInfo{pl.mhcharlee.ember/org.kustom.api.dashboard.DashboardActivity}" drawable="ember_klwp" />
 	<item component="ComponentInfo{pl.mobicore.mobilempk/pl.mobicore.mobilempk.ui.SplashScreen}" drawable="busnavi" />
 	<item component="ComponentInfo{pl.mp.empendium/pl.mp.empendium.ui.MainActivity}" drawable="empendium" />
