--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -6594,7 +6594,7 @@
 	<item drawable="maya" />
 	<item drawable="mayo_clinic" />
 	<item drawable="mb_bank" />
-	<item drawable="mbank" />
+	<item drawable="mbank_pl" />
 	<item drawable="mbl_m_smart" />
 	<item drawable="mbta_mticket" />
 	<item drawable="mbway" />
