--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -150,6 +150,7 @@
 	<item drawable="windows_app" />
 	<item drawable="word_of_the_day" />
 	<item drawable="worldcoin" />
+	<item drawable="geto" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -355,6 +356,7 @@
 	<item drawable="geomag_alt_1" />
 	<item drawable="geometric_weather_alt_1" />
 	<item drawable="geto_alt_1" />
+	<item drawable="geto_alt_2" />
 	<item drawable="gett_alt_1" />
 	<item drawable="github_alt_1" />
 	<item drawable="glitch_lab_alt_1" />
