--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -649,7 +649,6 @@
 	<item component="ComponentInfo{ca.bellmedia.cravetv/awl.application.brand.SplashActivity}" drawable="crave" />
 	<item component="ComponentInfo{ca.blood.giveblood/ca.blood.giveblood.SplashActivity}" drawable="give_blood" />
 	<item component="ComponentInfo{ca.bnc.android/ca.bnc.android.MainActivity}" drawable="nbc" />
-	<item component="ComponentInfo{ca.bnc.android/ca.bnc.android.custom.BncMainActivity}" drawable="national_bank_of_canada" />
 	<item component="ComponentInfo{ca.bnc.android/ca.bnc.android.custom.BncMainActivity}" drawable="nbc" />
 	<item component="ComponentInfo{ca.cbc.android.cbctv/com.lacronicus.cbcapplication.SplashActivity}" drawable="cbc_gem" />
 	<item component="ComponentInfo{ca.cbc.android.cbctv/tv.tou.android.splash.views.activities.SplashScreenActivity}" drawable="cbc_gem" />
@@ -1813,7 +1812,6 @@
 	<item component="ComponentInfo{com.applemoncash/com.zoontek.rnbootsplash.RNBootSplashActivity}" drawable="lemon_cash" />
 	<item component="ComponentInfo{com.application.zomato/com.application.zomato.activities.Splash}" drawable="zomato" />
 	<item component="ComponentInfo{com.application.zomato/com.application.zomato.default}" drawable="zomato" />
-	<item component="ComponentInfo{com.application.zomato/com.application.zomato.gold}" drawable="zomato" />
 	<item component="ComponentInfo{com.application.zomato/com.application.zomato.gold}" drawable="zomato" />
 	<item component="ComponentInfo{com.applidium.vianavigo/com.applidium.vianavigo.views.MainVianavigo}" drawable="idf_mobilites" />
 	<item component="ComponentInfo{com.applisto.appcloner.premium/com.applisto.appcloner.premium.StartActivity}" drawable="app_cloner" />
@@ -4787,7 +4785,6 @@
 	<item component="ComponentInfo{com.grammarly.android.keyboard/com.grammarly.android.keyboard.welcome.GetStartedActivity}" drawable="grammarly" />
 	<item component="ComponentInfo{com.grammarly.android.keyboard/com.grammarly.host.SplashActivity}" drawable="grammarly" />
 	<item component="ComponentInfo{com.grammarly.android.keyboard/com.grammarly.widget.launcher.LauncherActivity}" drawable="grammarly_ai_assistant" />
-	<item component="ComponentInfo{com.grammarly.android.keyboard/com.grammarly.widget.launcher.LauncherActivity}" drawable="grammarly" />
 	<item component="ComponentInfo{com.grandstream.wave/com.softphone.WelcomeActivity}" drawable="gs_wave" />
 	<item component="ComponentInfo{com.grapefrukt.games.bore/com.unity3d.player.UnityPlayerActivity}" drawable="holedown" />
 	<item component="ComponentInfo{com.graph.weather.forecast.channel/com.graph.weather.forecast.channel.activities.SettingActivity}" drawable="weather" />
@@ -5778,7 +5775,7 @@
 	<item component="ComponentInfo{com.koushikdutta.mirror/com.koushikdutta.mirror.StartActivity}" drawable="cwm_mirror" />
 	<item component="ComponentInfo{com.koushikdutta.vysor/com.koushikdutta.vysor.StartActivity}" drawable="vysor" />
 	<item component="ComponentInfo{com.kouzoh.mercari/com.kouzoh.mercari.activity.SplashActivity}" drawable="mercari" />
-	<item component="ComponentInfo{com.kouzoh.mercari/com.mercari.base.MainActivity}" drawable="mercari_alt" />
+	<item component="ComponentInfo{com.kouzoh.mercari/com.mercari.base.MainActivity}" drawable="mercari_alt_1" />
 	<item component="ComponentInfo{com.kpn.zorgmessenger/com.alterdesk.messenger.RootActivity}" drawable="zorg_messenger" />
 	<item component="ComponentInfo{com.kptncook.app.kptncook/com.kptncook.app.kptncook.SplashscreenActivity}" drawable="kptncook" />
 	<item component="ComponentInfo{com.kraken.invest.app/com.kraken.invest.app.MainActivity}" drawable="kraken" />
@@ -6504,7 +6501,6 @@
 	<item component="ComponentInfo{com.microsoft.powerbim/com.microsoft.powerbi.ui.home.HomeActivity}" drawable="microsoft_power_bi" />
 	<item component="ComponentInfo{com.microsoft.rdc.android/com.microsoft.rdc.ui.activities.HomeActivity}" drawable="microsoft_remote_desktop" />
 	<item component="ComponentInfo{com.microsoft.rdc.androidx.beta/com.microsoft.windowsapp.ui.HomeActivity}" drawable="windows_app" />
-	<item component="ComponentInfo{com.microsoft.rdc.androidx.beta/com.microsoft.windowsapp.ui.HomeActivity}" drawable="microsoft_remote_desktop" />
 	<item component="ComponentInfo{com.microsoft.rdc.androidx/com.microsoft.rdc.ui.activities.HomeActivity}" drawable="microsoft_remote_desktop" />
 	<item component="ComponentInfo{com.microsoft.scmx/com.microsoft.defender.ux.activity.MDMainActivity}" drawable="microsoft_defender" />
 	<item component="ComponentInfo{com.microsoft.sharepoint/com.microsoft.sharepoint.MainActivity}" drawable="microsoft_sharepoint" />
@@ -6829,9 +6825,9 @@
 	<item component="ComponentInfo{com.mydito/com.mydito.ui.login.GuidePageActivity}" drawable="dito" />
 	<item component="ComponentInfo{com.mydramalist.app/com.mydramalist.app.MainActivity}" drawable="mydramalist" />
 	<item component="ComponentInfo{com.myetherwallet.mewwallet/com.myetherwallet.mewwallet.MainActivity}" drawable="crypto" />
-	<item component="ComponentInfo{com.myfitnesspal.android/com.myfitnesspal.android.login.WelcomeActivity}" drawable="my__fitness__pal" />
-	<item component="ComponentInfo{com.myfitnesspal.android/com.myfitnesspal.android.login.Welcome}" drawable="my__fitness__pal" />
-	<item component="ComponentInfo{com.myfitnesspal.android/com.myfitnesspal.android.splash.SplashActivity}" drawable="my__fitness__pal" />
+	<item component="ComponentInfo{com.myfitnesspal.android/com.myfitnesspal.android.login.WelcomeActivity}" drawable="my_fitness_pal" />
+	<item component="ComponentInfo{com.myfitnesspal.android/com.myfitnesspal.android.login.Welcome}" drawable="my_fitness_pal" />
+	<item component="ComponentInfo{com.myfitnesspal.android/com.myfitnesspal.android.splash.SplashActivity}" drawable="my_fitness_pal" />
 	<item component="ComponentInfo{com.mygalaxy/com.mygalaxy.SplashScreenActivity}" drawable="my_galaxy" />
 	<item component="ComponentInfo{com.mygate.user/com.mygate.user.modules.shared.SplashActivity}" drawable="mygate" />
 	<item component="ComponentInfo{com.myhomeowork/com.myhomeowork.App}" drawable="myhomework" />
@@ -7690,7 +7686,6 @@
 	<item component="ComponentInfo{com.positron_it.zlib/com.positron_it.zlib.ui.splash.SplashActivity}" drawable="zlibrary" />
 	<item component="ComponentInfo{com.posteitaliane.spim/com.posteitaliane.spim.ui.activity.SplashActivity}" drawable="ufficio_postale" />
 	<item component="ComponentInfo{com.posteitaliane.spim/it.posteitaliane.df_home.splash.SplashActivity}" drawable="poste_italiane" />
-	<item component="ComponentInfo{com.posteitaliane.spim/it.posteitaliane.df_home.splash.SplashActivity}" drawable="ufficio_postale" />
 	<item component="ComponentInfo{com.postmates.android/com.postmates.android.ui.springboard.SpringboardActivity}" drawable="postmates" />
 	<item component="ComponentInfo{com.postmates.android/com.ubercab.eats.core.activity.LauncherActivity}" drawable="postmates" />
 	<item component="ComponentInfo{com.postpe.app/com.postpe.app.appUseCases.common.SplashActivity}" drawable="postpe" />
@@ -10845,7 +10840,7 @@
 	<item component="ComponentInfo{com.workday.workdroidapp/com.workday.workdroidapp.server.login.LauncherActivity}" drawable="workday" />
 	<item component="ComponentInfo{com.workflowy.android/com.workflowy.android.MainActivity}" drawable="workflowy" />
 	<item component="ComponentInfo{com.workjam.workjam/com.workjam.workjam.features.auth.LoginUsernameActivity}" drawable="workjam" />
-	<item component="ComponentInfo{com.worldcoin/com.worldcoin.app.main.MainActivity}" drawable="worldcoin" />
+	<item component="ComponentInfo{com.worldcoin/com.worldcoin.app.main.MainActivity}" drawable="worldcoin_wallet" />
 	<item component="ComponentInfo{com.worldofbilly.quickmuni/com.worldofbilly.quickmuni.MainActivity}" drawable="quicky" />
 	<item component="ComponentInfo{com.worldpersonalitiesapps.toptrumpwallpapers/com.worldpersonalitiesapps.toptrumpwallpapers.SplashScreenActivity}" drawable="trump_wallpapers" />
 	<item component="ComponentInfo{com.worldrugby.main/com.pl.rwc.onboarding.master.OnBoardingActivity}" drawable="rugby_world_cup" />
@@ -13955,7 +13950,6 @@
 	<item component="ComponentInfo{org.telegram.messenger.beta/org.telegram.ui.LaunchActivity}" drawable="telegram_foss" />
 	<item component="ComponentInfo{org.telegram.messenger.web/org.telegram.messenger.DefaultIcon}" drawable="telegram" />
 	<item component="ComponentInfo{org.telegram.messenger.web/org.telegram.messenger.TurboIcon}" drawable="telegram_turbo" />
-	<item component="ComponentInfo{org.telegram.messenger.web/org.telegram.messenger.TurboIcon}" drawable="telegram" />
 	<item component="ComponentInfo{org.telegram.messenger.web/org.telegram.ui.LaunchActivity}" drawable="telegram" />
 	<item component="ComponentInfo{org.telegram.messenger/com.exteragram.messenger.DefaultIcon}" drawable="ayugram" />
 	<item component="ComponentInfo{org.telegram.messenger/org.telegram.messenger.AquaIcon}" drawable="telegram_aqua" />
@@ -14369,7 +14363,6 @@
 	<item component="ComponentInfo{ru.bluecat.yandexmapspatcher/ru.bluecat.yandexmapspatcher.Home}" drawable="yandex_maps" />
 	<item component="ComponentInfo{ru.boloid.giszkh2/ru.boloid.giszkh2dev.activities.SplashActivity}" drawable="gis_zkh" />
 	<item component="ComponentInfo{ru.boxberry.mobile/ru.handh.android.boxberry.ui.activity.MainActivity}" drawable="boxberry" />
-	<item component="ComponentInfo{ru.bpc.mobilebank.bpc/android.svat.bpcbt.com.modulesplash.SplashActivity}" drawable="bank" />
 	<item component="ComponentInfo{ru.bpc.mobilebank.bpc/android.svat.bpcbt.com.modulesplash.SplashActivity}" drawable="baridi_mob" />
 	<item component="ComponentInfo{ru.bspb/ru.bspb.MainActivity}" drawable="bspb" />
 	<item component="ComponentInfo{ru.burgerking/ru.burgerking.feature.splash.SplashScreenActivity}" drawable="burger_king" />
