--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -80,7 +80,7 @@
 	<item drawable="meditation_assistant" />
 	<item drawable="medium" />
 	<item drawable="mercado_pago" />
-	<item drawable="mercari_alt" />
+	<item drawable="mercari_alt_1" />
 	<item drawable="messenger_kids" />
 	<item drawable="mindful" />
 	<item drawable="mock_traffic" />
@@ -149,7 +149,7 @@
 	<item drawable="wikireader" />
 	<item drawable="windows_app" />
 	<item drawable="word_of_the_day" />
-	<item drawable="worldcoin" />
+	<item drawable="worldcoin_wallet" />
 	<item drawable="geto" />
 
 	<category title="Alts" />
@@ -523,7 +523,7 @@
 	<item drawable="music_alt_5" />
 	<item drawable="musicolet_alt_1" />
 	<item drawable="musify_alt_1" />
-	<item drawable="my__fitness__pal_alt_1" />
+	<item drawable="my_fitness_pal_alt_1" />
 	<item drawable="my_att_alt_1" />
 	<item drawable="myfastweb_alt_1" />
 	<item drawable="mysplash_alt_1" />
@@ -538,6 +538,7 @@
 	<item drawable="nagram_neon" />
 	<item drawable="nagram_niello" />
 	<item drawable="nationwide_alt_1" />
+	<item drawable="nbc_alt_1" />
 	<item drawable="neko_alt_1" />
 	<item drawable="neko_alt_2" />
 	<item drawable="nekobox_alt_1" />
@@ -6685,7 +6686,6 @@
 	<item drawable="mercado_libre" />
 	<item drawable="mercado_pago" />
 	<item drawable="mercari" />
-	<item drawable="mercari_alt" />
 	<item drawable="mercedes" />
 	<item drawable="merck_manual_consumer" />
 	<item drawable="mercurygram" />
@@ -7100,7 +7100,7 @@
 	<item drawable="mx_player" />
 	<item drawable="mx_player_beta" />
 	<item drawable="my48" />
-	<item drawable="my__fitness__pal" />
+	<item drawable="my_fitness_pal" />
 	<item drawable="my__grades" />
 	<item drawable="my__mail" />
 	<item drawable="my__sports" />
@@ -11003,9 +11003,9 @@
 	<item drawable="world_of_tanks" />
 	<item drawable="world_of_tanks_assistant" />
 	<item drawable="world_scribe" />
+	<item drawable="worldcoin_wallet" />
 	<item drawable="worldbox" />
 	<item drawable="worldclock" />
-	<item drawable="worldcoin" />
 	<item drawable="wormhole" />
 	<item drawable="wow_companion" />
 	<item drawable="wow_kwgt" />
