--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -5775,7 +5775,7 @@
 	<item component="ComponentInfo{com.koushikdutta.mirror/com.koushikdutta.mirror.StartActivity}" drawable="cwm_mirror" />
 	<item component="ComponentInfo{com.koushikdutta.vysor/com.koushikdutta.vysor.StartActivity}" drawable="vysor" />
 	<item component="ComponentInfo{com.kouzoh.mercari/com.kouzoh.mercari.activity.SplashActivity}" drawable="mercari" />
-	<item component="ComponentInfo{com.kouzoh.mercari/com.mercari.base.MainActivity}" drawable="mercari_alt_1" />
+	<item component="ComponentInfo{com.kouzoh.mercari/com.mercari.base.MainActivity}" drawable="mercari" />
 	<item component="ComponentInfo{com.kpn.zorgmessenger/com.alterdesk.messenger.RootActivity}" drawable="zorg_messenger" />
 	<item component="ComponentInfo{com.kptncook.app.kptncook/com.kptncook.app.kptncook.SplashscreenActivity}" drawable="kptncook" />
 	<item component="ComponentInfo{com.kraken.invest.app/com.kraken.invest.app.MainActivity}" drawable="kraken" />
