--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -106,6 +106,11 @@
         image=""
         link="https://instagram.com/dansideris" />
     <contributor
+        name="Danek309044"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/90469284"
+        link="https://github.com/danek309044" />
+    <contributor
         name="David Josefson"
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/7073402"
