Add ComponentInfos and Clean some SVG files

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -4897,6 +4897,7 @@
 	<item component="ComponentInfo{com.happening.studios.swipeforfacebookpro/com.happening.studios.swipeforfacebookpro.activities.SplashActivity}" drawable="swipe" />
 	<item component="ComponentInfo{com.happening.studios.swipeforfacebookpro/com.happening.studios.swipeforfacebookpro.main.SplashActivity}" drawable="swipe" />
 	<item component="ComponentInfo{com.happymod.apk/com.happymod.apk.hmmvp.allfunction.LaunchActivity}" drawable="lucky_patcher" />
+	<item component="ComponentInfo{com.happymod.apk/com.happymod.apk.hmmvp.main.LaunchActivity}" drawable="lucky_patcher" />
 	<item component="ComponentInfo{com.haraj.app/com.haraj.app.main.MainActivity}" drawable="haraj" />
 	<item component="ComponentInfo{com.hardbacknutter.nevertoomanybooks/com.hardbacknutter.nevertoomanybooks.StartupActivity}" drawable="nevertoomanybooks" />
 	<item component="ComponentInfo{com.hardbacknutter.sshd/com.hardbacknutter.sshd.MainActivity}" drawable="sshd4a" />
@@ -5697,6 +5698,7 @@
 	<item component="ComponentInfo{com.kieronquinn.app.taptap/com.kieronquinn.app.taptap.ui.activities.MainActivity}" drawable="tap_tap" />
 	<item component="ComponentInfo{com.kieronquinn.app.taptap/com.kieronquinn.app.taptap.ui.activities.SettingsActivity}" drawable="tap_tap" />
 	<item component="ComponentInfo{com.kii.safe/com.keepsafe.app.frontdoor.FrontDoorActivity}" drawable="keepsafe" />
+	<item component="ComponentInfo{com.kii.safe/com.kii.safe.Default}" drawable="keepsafe" />
 	<item component="ComponentInfo{com.kii.safe/com.kii.safe.FrontDoorActivity}" drawable="keepsafe" />
 	<item component="ComponentInfo{com.kiloo.subwaysurf/com.sybogames.chili.multidex.ChiliMultidexSupportActivity}" drawable="subway_surfers" />
 	<item component="ComponentInfo{com.kimcy929.screenrecorder/com.kimcy929.screenrecorder.activity.MainActivity}" drawable="video_recorder" />
