--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -151,6 +151,25 @@
 	<item drawable="word_of_the_day" />
 	<item drawable="worldcoin_wallet" />
 	<item drawable="geto" />
+	<item drawable="tasks_alt_amber" />
+	<item drawable="tasks_alt_blue_grey" />
+	<item drawable="tasks_alt_brown" />
+	<item drawable="tasks_alt_cyan" />
+	<item drawable="tasks_alt_dark_grey" />
+	<item drawable="tasks_alt_deep_orange" />
+	<item drawable="tasks_alt_deep_purple" />
+	<item drawable="tasks_alt_green" />
+	<item drawable="tasks_alt_grey" />
+	<item drawable="tasks_alt_indigo" />
+	<item drawable="tasks_alt_light_blue" />
+	<item drawable="tasks_alt_light_green" />
+	<item drawable="tasks_alt_lime" />
+	<item drawable="tasks_alt_orange" />
+	<item drawable="tasks_alt_pink" />
+	<item drawable="tasks_alt_purple" />
+	<item drawable="tasks_alt_red" />
+	<item drawable="tasks_alt_teal" />
+	<item drawable="tasks_alt_yellow" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -1080,6 +1099,26 @@
 	<item drawable="tapet_wallpapers_alt_1" />
 	<item drawable="tapet_wallpapers_alt_2" />
 	<item drawable="taskito_alt_1" />
+	<item drawable="tasks_alt_1" />
+	<item drawable="tasks_alt_amber" />
+	<item drawable="tasks_alt_blue_grey" />
+	<item drawable="tasks_alt_brown" />
+	<item drawable="tasks_alt_cyan" />
+	<item drawable="tasks_alt_dark_grey" />
+	<item drawable="tasks_alt_deep_orange" />
+	<item drawable="tasks_alt_deep_purple" />
+	<item drawable="tasks_alt_green" />
+	<item drawable="tasks_alt_grey" />
+	<item drawable="tasks_alt_indigo" />
+	<item drawable="tasks_alt_light_blue" />
+	<item drawable="tasks_alt_light_green" />
+	<item drawable="tasks_alt_lime" />
+	<item drawable="tasks_alt_orange" />
+	<item drawable="tasks_alt_pink" />
+	<item drawable="tasks_alt_purple" />
+	<item drawable="tasks_alt_red" />
+	<item drawable="tasks_alt_teal" />
+	<item drawable="tasks_alt_yellow" />
 	<item drawable="tata_play_alt_1" />
 	<item drawable="tele2_alt_1" />
 	<item drawable="telegram_alt_1" />
